--- a/trunk/Docs/src/manual.texi
+++ b/trunk/Docs/src/manual.texi
@@ -339,36 +339,81 @@ Another important factor is that material names must be unique throughout ALL sc
 
 @heading Format
 
-Several materials may be defined in a single script. The script format is pseudo-C++, with sections delimited by curly braces ({}), and comments indicated by starting a line with '//' (note, no nested form comments allowed). The general format is shown below in a typical example:@*@*
+Several materials may be defined in a single script. The script format is pseudo-C++, with sections delimited by curly braces ({}), and comments indicated by starting a line with '//' (note, no nested form comments allowed). The general format is shown below in the example below (note that to start with, we only consider fixed-function materials which don't use vertex or fragment programs, these are covered later):@*@*
 @example
 // This is a comment
-walls/funkywall1
+material walls/funkywall1
 {
-    ambient 0.5 0.5 0.5
-    diffuse 1.0 1.0 1.0
+    // first, preferred technique
+    technique
     {
-        // Texture layer 1
-        texture wibbly.jpg
-        scroll_anim 0.1 0.0
-        wave_xform scale sine 0.0 0.7 0.0 1.0
+        // first pass
+	pass
+	{
+	    ambient 0.5 0.5 0.5
+            diffuse 1.0 1.0 1.0
+			
+            // Texture unit 0
+            texture_unit 
+	    {
+                texture wibbly.jpg
+                scroll_anim 0.1 0.0
+                wave_xform scale sine 0.0 0.7 0.0 1.0
+	    }
+	    // Texture unit 1 (this is a multitexture pass)
+	    texture_unit
+	    {
+	        texture wobbly.png
+		rotate_anim 0.25
+		colour_op add
+	    }
+	}
     }
 
+    // Second technique, can be used as a fallback or LOD level
+    technique
     {
-        // Texture Layer 2
-        texture wobbly.png
-        rotate_anim 0.25
-        colour_op add
+    	// .. and so on
     }
+		
 }
 @end example
 
-Every material in the script must be given a name, which is the line before the first opening '{'. This name must be globally unique. It can include path characters (as in the example) to logically divide up your materials, and also to avoid duplicate names, but the engine does not treat the name a hierarchical, just as a string.@*@*
+Every material in the script must be given a name, which is the line 'material <blah>' before the first opening '{'. This name must be globally unique. It can include path characters (as in the example) to logically divide up your materials, and also to avoid duplicate names, but the engine does not treat the name a hierarchical, just as a string.@*@*
 
-A material can have top-level attributes set using the scripting commands available, such as 'ambient' to set the amount & colour of the ambient light reflected by the material. Texture layers are added by nesting braces within the material definition, and attributes defined within these braces apply to the texture layer only. The order of the texture layers is important; subsequent texture layers are applied on top of existing ones in the script.@*@*
+A material can be made up of many techniques (@xref{Techniques})- a technique is one way of achieving the effect you are looking for. You can supply more than one technique in order to provide fallback approaches where a card does not have the ability to render the preferred technique, or where you wish to define lower level of detail versions of the material in order to conserve rendering power when objects are more distant. @*@*
 
-For a detailed description of the material and layer attributes, see the list below.
+Each technique can be made up of many passes (@xref{Passes}), that is a complete render of the object can be performed multiple times with different settings in order to produce composite effects. Ogre may also split the passes you have defined into many passes at runtime, if you define a pass which uses too many texture units for the card you are currently running on (note that it can only do this if you are not using a fragment program). Each pass has a number of top-level attributes such as 'ambient' to set the amount & colour of the ambient light reflected by the material. Some of these options do not apply if you are using vertex programs, @xref{Passes} for more details. @*@*
 
-@heading Available Material Attributes
+Within each pass, there can be zero or many texture units in use (@xref{Texture Units}). These define the texture to be used, and optionally some blending operations (which use multitexturing) and texture effects.@*@*
+
+You can also define vertex and fragment programs in a .material script, and reference those programs in a pass with a given set of parameters. @xref{Declaring Vertex and Fragment Programs} and @ref{Using Vertex and Fragment Programs in a Pass}.
+
+@node Techniques
+@subsection Techniques
+
+A "technique" section in your material script encapsulates a single method of rendering an object. The simplest of material definitions only contains a single technique, however since PC hardware varies quite greatly in it's capabilities, you can only do this if you are sure that every card for which you intend to target your application will support the capabilities which your technique requires. In addition, it can be useful to define simpler ways to render a material if you wish to use material LOD, such that more distant objects use a simpler, less performance-hungry technique.@*@*
+
+When a material is used for the first time, it is 'compiled'. That involves scanning the techniques which have been defined, and marking which of them are supportable using the current rendering API and graphics card. If no techniques are supportable, your material will render as blank white. The compilation examines a number of things, such as:
+@itemize @bullet
+@item The number of texture_unit entries in each pass@*
+Note that if the number of texture_unit entries exceeds the number of texture units in the current graphics card, the technique may still be supportable so long as a fragment program is not being used. In this case, Ogre will split the pass which has too many entries into multiple passes for the less capable card, and the multitexture blend will be turned into a multipass blend (@xref{colour_op_multipass_fallback}).
+@item Whether vertex or fragment programs are used, and if so which syntax they use (e.g. vs_1_1, ps_2_x, arbfp1 etc)
+@item Other effects like cube mapping and dot3 blending
+@end itemize
+@*
+In a material script, techniques must be listed in order of preference, i.e. the earlier techniques are preferred over the later techniques. This normally means you will list your most advanced, most demanding techniques first in the script, and list fallbacks afterwards.@*@*
+
+Techniques do not have any attributes of their own, they are simply a container for a number of passes, @xref{Passes}.
+
+@node Passes
+@subsection Passes
+A pass is a single render of the geometry in question; a single call to the rendering API with a certain set of rendering properties. A technique can have between one and 16 passes, although clearly the more passes you use, the more expensive the technique will be to render.@*@*
+Passes have a set of global attributes (described below), zero or more nested texture_unit entries (@xref{Texture Units}), and optionally a reference to a vertex and / or a fragment program (@xref{Using Vertex and Fragment Programs in a Pass}).
+
+@*@*
+Here are the attributes you can use in a 'pass' section of a .material script:
+
 @itemize @bullet
 @item
 @ref{ambient}
@@ -397,100 +442,58 @@ For a detailed description of the material and layer attributes, see the list be
 @item
 @ref{shading}
 @item
-@ref{filtering}
-@item
 @ref{fog_override}
+@item
+@ref{colour_write}
 @end itemize
 
-@heading Available Texture Layer Attributes
-@itemize @bullet
-@item
-@ref{texture}
-@item
-@ref{anim_texture}
-@item
-@ref{cubic_texture}
-@item
-@ref{tex_coord_set}
-@item
-@ref{tex_address_mode}
-@item
-@ref{colour_op}
-@item
-@ref{alpha_rejection}
-@item
-@ref{colour_op_ex}
-@item
-@ref{colour_op_multipass_fallback}
-@item
-@ref{alpha_op_ex}
-@item
-@ref{env_map}
-@item
-@ref{scroll}
-@item
-@ref{scroll_anim}
-@item
-@ref{rotate}
-@item
-@ref{rotate_anim}
-@item
-@ref{scale}
-@item
-@ref{wave_xform}
-@end itemize
-
-@node Material Attributes
-@subsection Material Attributes
-
-These attributes are valid within the outer braces of a material in a script. They must each be on their own line. Ordering is unimportant.
-
+@heading Attribute Descriptions
 @anchor{ambient}
 @subheading ambient
 
-Sets the ambient colour reflectance properties of this material.@*@*
+Sets the ambient colour reflectance properties of this pass. @strong{This attribute has no effect if a vertex program is used.} @*@*
 
 Format: ambient <red> <green> <blue>@*
 NB valid colour values are between 0.0 and 1.0.@*@*
 
 Example: ambient 0.0 0.8 0.0@*@*
 
-The base colour of a material is determined by how much red, green and blue light is reflects. This property determines how much ambient light (directionless global light) is reflected. The default is full white, meaning objects are completely globally illuminated. Reduce this if you want to see diffuse or specular light effects, or change the blend of colours to make the object have a base colour other than white. This setting has no effect if dynamic lighting is disabled using the 'lighting off' attribute, or if any texture layer has a 'colour_op replace' attribute.@*@*
+The base colour of a pass is determined by how much red, green and blue light is reflects at each vertex. This property determines how much ambient light (directionless global light) is reflected. The default is full white, meaning objects are completely globally illuminated. Reduce this if you want to see diffuse or specular light effects, or change the blend of colours to make the object have a base colour other than white. This setting has no effect if dynamic lighting is disabled using the 'lighting off' attribute, or if any texture layer has a 'colour_op replace' attribute.@*@*
 
 Default: ambient 1.0 1.0 1.0@*@*
 
 @anchor{diffuse}
 @subheading diffuse
 
-Sets the diffuse colour reflectance properties of this material.@*@*
+Sets the diffuse colour reflectance properties of this pass. @strong{This attribute has no effect if a vertex program is used.}@*@*
 
 Format: diffuse <red> <green> <blue>@*
 NB valid colour values are between 0.0 and 1.0.@*@*
 
 Example: diffuse 1.0 0.5 0.5@*@*
 
-The base colour of a material is determined by how much red, green and blue light is reflects. This property determines how much diffuse light (light from instances of the Light class in the scene) is reflected. The default is full white, meaning objects reflect the maximum white light they can from Light objects. This setting has no effect if dynamic lighting is disabled using the 'lighting off' attribute, or if any texture layer has a 'colour_op replace' attribute.@*@*
+The base colour of a pass is determined by how much red, green and blue light is reflects at each vertex. This property determines how much diffuse light (light from instances of the Light class in the scene) is reflected. The default is full white, meaning objects reflect the maximum white light they can from Light objects. This setting has no effect if dynamic lighting is disabled using the 'lighting off' attribute, or if any texture layer has a 'colour_op replace' attribute.@*@*
 
 Default: diffuse 1.0 1.0 1.0@*@*
 
 @anchor{specular}
 @subheading specular
 
-Sets the specular colour reflectance properties of this material.@*@*
+Sets the specular colour reflectance properties of this pass. @strong{This attribute has no effect if a vertex program is used.}@*@*
 
 Format: specular <red> <green> <blue> <shininess>@*
 NB valid colour values are between 0.0 and 1.0. Shininess can be any value greater than 0.@*@*
 
 Example: specular 1.0 1.0 1.0 12.5@*@*
 
-The base colour of a material is determined by how much red, green and blue light is reflects. This property determines how much specular light (highlights from instances of the Light class in the scene) is reflected. The default is to reflect no specular light. The colour of the specular highlights is determined by the colour parameters, and the size of the highlights by the separate shininess parameter. This setting has no effect if dynamic lighting is disabled using the 'lighting off' attribute, or if any texture layer has a 'colour_op replace' attribute.@*@*
+The base colour of a pass is determined by how much red, green and blue light is reflects at each vertex. This property determines how much specular light (highlights from instances of the Light class in the scene) is reflected. The default is to reflect no specular light. The colour of the specular highlights is determined by the colour parameters, and the size of the highlights by the separate shininess parameter. This setting has no effect if dynamic lighting is disabled using the 'lighting off' attribute, or if any texture layer has a 'colour_op replace' attribute.@*@*
 
 Default: specular 0.0 0.0 0.0 0.0@*@*
 
 @anchor{emissive}
 @subheading emissive
 
-Sets the amount of self-illumination an object has.@*@*
+Sets the amount of self-illumination an object has. @strong{This attribute has no effect if a vertex program is used.}@*@*
 
 Format: emissive <red> <green> <blue>@*
 NB valid colour values are between 0.0 and 1.0.@*@*
@@ -504,7 +507,7 @@ Default: emissive 0.0 0.0 0.0@*@*
 @anchor{scene_blend}
 @subheading scene_blend
 
-Sets the kind of blending this material has with the existing contents of the scene. Wheras the texture blending operations seen in the TextureLayer class are concerned with blending between texture layers, this blending is about combining the output of the material as a whole with the existing contents of the rendering target. This blending therefore allows object transparency and other special effects. There are 2 formats, one using predefined blend types, the other allowing a roll-your-own approach using source and destination factors.@*@*
+Sets the kind of blending this pass has with the existing contents of the scene. Wheras the texture blending operations seen in the texture_unit entries are concerned with blending between texture layers, this blending is about combining the output of this pass as a whole with the existing contents of the rendering target. This blending therefore allows object transparency and other special effects. There are 2 formats, one using predefined blend types, the other allowing a roll-your-own approach using source and destination factors.@*@*
 
 Format1: scene_blend <add|modulate|alpha_blend>@*@*
 
@@ -553,7 +556,7 @@ Default: scene_blend one zero (opaque)
 @anchor{depth_check}
 @subheading depth_check
 
-Sets whether or not this material renders with depth-buffer checking on or not.@*@*
+Sets whether or not this pass renders with depth-buffer checking on or not.@*@*
 
 Format: depth_check <on|off>@*@*
 
@@ -564,7 +567,7 @@ Default: depth_check on@*@*
 @anchor{depth_write}
 @subheading depth_write
 
-Sets whether or not this material renders with depth-buffer writing on or not.@*
+Sets whether or not this pass renders with depth-buffer writing on or not.@*
 
 Format: depth_write <on|off>@*@*
 
@@ -604,7 +607,7 @@ Default: depth_func less_equal
 @anchor{depth_bias}
 @subheading depth_bias
 
-Sets the bias applied to the depth value of this material. Can be used to make coplanar polygons appear on top of others e.g. for decals. @*@*
+Sets the bias applied to the depth value of this pass. Can be used to make coplanar polygons appear on top of others e.g. for decals. @*@*
 
 Format: depth_bias <value>@*@*
 
@@ -613,11 +616,11 @@ Where <value> is between 0 and 16, the default being 0. The higher the value, th
 @anchor{cull_hardware}
 @subheading cull_hardware
 
-Sets the hardware culling mode for this material.@*@*
+Sets the hardware culling mode for this pass.@*@*
 
 Format: cull_hardware <clockwise|anitclockwise|none>@*@*
 
-A typical way for the hardware rendering engine to cull triangles is based on the 'vertex winding' of triangles. Vertex winding refers to the direction in which the vertices are passed or indexed to in the rendering operation as viewed from the camera, and will wither be clockwise or anticlockwise (that's 'counterclockwise' for you Americans out there ;). If the option 'cull_hardware clockwise' is set, all triangles whose vertices are viewed in clockwise order from the camera will be culled by the hardware. 'anticlockwise' is the reverse (obviously), and 'none' turns off hardware culling so all triagles are rendered (useful for creating 2-sided materials).@*@*
+A typical way for the hardware rendering engine to cull triangles is based on the 'vertex winding' of triangles. Vertex winding refers to the direction in which the vertices are passed or indexed to in the rendering operation as viewed from the camera, and will wither be clockwise or anticlockwise (that's 'counterclockwise' for you Americans out there ;). If the option 'cull_hardware clockwise' is set, all triangles whose vertices are viewed in clockwise order from the camera will be culled by the hardware. 'anticlockwise' is the reverse (obviously), and 'none' turns off hardware culling so all triagles are rendered (useful for creating 2-sided passes).@*@*
 
 Default: cull_hardware clockwise@*
 NB this is the same as OpenGL's default but the opposite of Direct3D's default (because Ogre uses a right-handed coordinate system like OpenGL).
@@ -625,7 +628,7 @@ NB this is the same as OpenGL's default but the opposite of Direct3D's default (
 @anchor{cull_software}
 @subheading cull_software
 
-Sets the software culling mode for this material.@*@*
+Sets the software culling mode for this pass.@*@*
 
 Format: cull_software <back|front|none>@*@*
 
@@ -636,18 +639,18 @@ Default: cull_software back@*@*
 @anchor{lighting}
 @subheading lighting
 
-Sets whether or not dynamic lighting is turned on for this material or not. If lighting is turned off, all objects rendered using the material will be fully lit.@*@*
+Sets whether or not dynamic lighting is turned on for this pass or not. If lighting is turned off, all objects rendered using the pass will be fully lit. @strong{This attribute has no effect if a vertex program is used.}@*@*
 
 Format: lighting <on|off>@*@*
 
-Turning dynamic lighting off makes any ambient, diffuse, specular, emissive and shading properties for this material redundant. When lighting is turned on, objects are lit according to their vertex normals for diffuse and specular light, and globally for ambient and emissive.@*@*
+Turning dynamic lighting off makes any ambient, diffuse, specular, emissive and shading properties for this pass redundant. When lighting is turned on, objects are lit according to their vertex normals for diffuse and specular light, and globally for ambient and emissive.@*@*
 
 Default: lighting on@*@*
 
 @anchor{shading}
 @subheading shading
 
-Sets the kind of shading which should be used for representing dynamic lighting for this material.@*@*
+Sets the kind of shading which should be used for representing dynamic lighting for this pass.@*@*
 
 Format: shading <flat|gouraud|phong>@*@*
 
@@ -662,25 +665,16 @@ When dynamic lighting is turned on, the effect is to generate colour values at e
 @end table
 Default: shading gouraud@*@*
 
-@anchor{filtering}
-@subheading filtering
-
-Sets the type of texture filtering used when magnifying or minifying a texture.@*@*
-
-Format: filtering <none|bilinear|trilinear>@*@*
-
-Default: filtering bilinear@*@*
-
 @anchor{fog_override}
 @subheading fog_override
 
-Tells the material to whether it should override the scene fog settings, and enforce it's own. Very useful for things that you don't want to be affected by fog when the rest of the scene is fogged, or vice versa.@*@*
+Tells the pass whether it should override the scene fog settings, and enforce it's own. Very useful for things that you don't want to be affected by fog when the rest of the scene is fogged, or vice versa.@*@*
 
 Format: fog_override <override?> [<type> <colour> <density> <start> <end>]@*@*
 
 Default: fog_override false@*@*
 
-If you specify 'true' for the first parameter and you supply the rest of the parameters, you are telling the material to use these fog settings in preference to the scene settings, whatever they might be. If you specify 'true' but provide no further parameters, you are telling this material to never use fogging no matter what the scene says. Here is an explanation of the parameters:@*
+If you specify 'true' for the first parameter and you supply the rest of the parameters, you are telling the pass to use these fog settings in preference to the scene settings, whatever they might be. If you specify 'true' but provide no further parameters, you are telling this pass to never use fogging no matter what the scene says. Here is an explanation of the parameters:@*
 @table @asis
 @item type
 @strong{none} = No fog, equivalent of just using 'fog_override true'@*
@@ -699,12 +693,75 @@ If you specify 'true' for the first parameter and you supply the rest of the par
 @*
 Example: fog_override true exp 1 1 1 0.002 100 10000
 
+@anchor{colour_write}
+@subheading colour_write
 
-@node Texture Layer Attributes
-@subsection Texture Layer Attributes
+Sets whether or not this pass renders with colour writing on or not.@*
 
-Texture layers are added in order by including nested brace sections in the material. Any of the following attributes can be included in any order within these braces.
+Format: colour_write <on|off>@*@*
 
+If colour writing is off no visible pixels are written to the screen during this pass. You might think this is useless, but if you render with colour writing off, and with very minimal other settings, you can use this pass to initialise the depth buffer before subsequently rendering other passes which fill in the colour data. This can give you significant performance boosts on some newer cards, especially when using complex fragment programs, because if the depth check fails then the fragment program is never run. @*@*
+
+Default: colour_write on@*
+
+@anchor{vertex_program_ref}
+@subheading vertex_program_ref
+
+Links a vertex program to this pass, and specifies parameters to supply it with. @*
+
+Format: colour_write <on|off>@*@*
+
+If colour writing is off no visible pixels are written to the screen during this pass. You might think this is useless, but if you render with colour writing off, and with very minimal other settings, you can use this pass to initialise the depth buffer before subsequently rendering other passes which fill in the colour data. This can give you significant performance boosts on some newer cards, especially when using complex fragment programs, because if the depth check fails then the fragment program is never run. @*@*
+
+Default: colour_write on@*
+
+
+@node Texture Units
+@subsection Texture Units
+
+Here are the attributes you can use in a 'texture_unit' section of a .material script:
+
+@heading Available Texture Layer Attributes
+@itemize @bullet
+@item
+@ref{texture}
+@item
+@ref{anim_texture}
+@item
+@ref{cubic_texture}
+@item
+@ref{tex_coord_set}
+@item
+@ref{tex_address_mode}
+@item
+@ref{filtering}
+@item
+@ref{colour_op}
+@item
+@ref{alpha_rejection}
+@item
+@ref{colour_op_ex}
+@item
+@ref{colour_op_multipass_fallback}
+@item
+@ref{alpha_op_ex}
+@item
+@ref{env_map}
+@item
+@ref{scroll}
+@item
+@ref{scroll_anim}
+@item
+@ref{rotate}
+@item
+@ref{rotate_anim}
+@item
+@ref{scale}
+@item
+@ref{wave_xform}
+@end itemize
+
+@heading Attribute Descriptions
 @anchor{texture}
 @subheading texture
 
@@ -786,6 +843,15 @@ Format: tex_address_mode <wrap|clamp|mirror>
 @end table
 @*
 Default: tex_address_mode wrap@*@*
+
+@anchor{filtering}
+@subheading filtering
+
+Sets the type of texture filtering used when magnifying or minifying a texture.@*@*
+
+Format: filtering <none|bilinear|trilinear>@*@*
+
+Default: filtering bilinear@*@*
 
 @anchor{colour_op}
 @subheading colour_op
@@ -1010,6 +1076,138 @@ Example: wave_xform scale_x sine 1.0 0.2 0.0 5.0@*@*
 @end table
 @*
 The range of the output of the wave will be {base, base+amplitude}. So the example above scales the texture in the x direction between 1 (normal size) and 5 along a sine wave at one cycle every 5 second (0.2 waves per second).@*@*
+
+@node Declaring Vertex and Fragment Programs
+@subsection Declaring Vertex and Fragment Programs
+
+In order to use a vertex or fragment program in your materials (@xref{Using Vertex and Fragment Programs in a Pass}), you have to define them. The definition of a program can be in the same .material script, or it can be in another one - the ordering of the definition and the use do not matter in the script, so long as when the material is used for the first time, the program has been defined.@*@*
+
+Vertex and fragment programs can be low-level (i.e. assembler code written to the specification of a given low level syntax such as vs_1_1 or arbfp1) or high-level such as nVidia's Cg language. High level languages give you a number of advantages, such as being able to write more intuitive code, and possibly being able to target multiple architectures in a single program (for example, the same Cg program might be able to be used in both D3D and GL, whilst the equivalent low-level programs would require separate techniques, each targetting a different API). High-level programs also allow you to use named parameters instead of simply indexed ones, although parameters are not defined here, they are used in the Pass.@*@*
+
+Here is an example of a definition of a low-level vertex program:
+@example
+vertex_program myVertexProgram asm
+{
+    source myVertexProgram.asm 
+    syntax vs_1_1
+}
+@end example
+As you can see, that's very simple. You give the program a name in the header, followed by the word 'asm' to indicate that this is a low-level program. Inside the braces, you specify where the source is going to come from (and this is loaded from any of the resource locations as with other media), and also indicate the syntax being used. You might wonder why the syntax specification is required when many of the assembler syntaxes have a header identifying them anyway - well the reason is that the engine needs to know what syntax the program is in before reading it, because during compilation of the material, we want to skip progams which use an unsupportable syntax quickly, without loading the program first.@*@*
+
+Syntaxes include vs_1_1, vs_2_0, vs_2_x, ps_1_1, ps_1_2, ps_1_3, ps_1_4, ps_2_x, arbvp1, arbfp1, but you can get a definitive list of those supported by your card by calling GpuProgramManager::getSingleton().getSupportedSyntax().@*@*
+
+Fragment program syntax is exactly the same, just replace vertex_program with fragment_program.@*@*
+
+@subheading High-level Programs
+Support for high level programs is provided through plugins; this is to make sure that an application using OGRE can use as little or as much of the high-level program functionality as they like. The first high-level program type supported by OGRE is Cg, a cross-API, cross-platform and cross-card language which has the same syntax as Direct3D9's HLSL, but can be compiled for GL too (@url{www.nvidia.com/cg}).@*@*
+
+The definition of high-level programs in .material scripts allows for additional custom parameters to be set in the body of the program definition. Here is an example of declaring a Cg fragment program:
+@example
+fragment_program myCgFragmentProgram cg
+{
+    source mCgFragmentProgram.cg
+    entry_point main
+    profiles ps_2_0 arbfp1
+}
+@end example
+There are a few differences between this and the assembler program - to begin with, we declare that the fragment program is of type 'cg' rather than 'asm', which indicates that it's a high-level program using Cg. The 'source' parameter is the same, except this time it's referencing a Cg source file instead of a file of assembler. @*@*
+Here is where things start to change. Firstly, we need to define an 'entry_point', which is the name of a function in the Cg program which will be the first one called as part of the fragment program. Unlike assembler programs, which just run top-to-bottom, Cg programs can include multiple functions and as such you must specify the one which start the ball rolling.@*@*
+Next, instead of a fixed 'syntax' parameter, you specify one or more 'profiles'; profiles are how Cg compiles a program down to the low-level assembler. The profiles have the same names as the assembler syntax codes mentioned above; the main difference is that you can list more than one, thus allowing the program to be compiled down to more low-level syntaxes so you can write a single high-level program which runs on both D3D and GL. You are advised to just enter the simplest profiles under which your programs can be compiled in order to give it the maximum compatibility.
+
+@node Using Vertex and Fragment Programs in a Pass
+@subsection Using Vertex and Fragment Programs in a Pass
+
+Within a pass section of a material script, you can reference a vertex and / or a fragment program which is been defined elsewhere either in this or another .material script (@xref{Declaring Vertex and Fragment Programs}). The programs are defined separately from the usage of them in the pass, since the programs are very likely to be reused between many separate materials, probably across many different .material scripts, so this approach lets you define the program only once and use it many times.@*@*
+
+As well as naming the program in question, you can also provide parameters to it. Here's a simple example:
+@example
+vertex_program_ref myVertexProgram
+{
+	param_indexed_auto 0 WORLDVIEWPROJ_MATRIX
+	param_indexed      16 float4  10.0 0 0 0
+}
+@end example
+In this example, we bind a vertex program called 'myVertexProgram' (which will be defined elsewhere) to the pass, and give it 2 parameters, one is an 'auto' parameter, meaning we do not have to supply a value as such, just a recognised code (in this case it's the world/view/projection matrix which is kept up to date automatically by Ogre). The second parameter is a manually specified parameter, a 4-element float. The indexes are described later.@*@*
+
+The syntax of the link to a vertex program and a fragment program are identical, the only difference is that 'fragment_program_ref' is used instead of 'vertex_program_ref'.
+
+@subheading Parameter specification
+Parameters can be specified using one of 4 commands:
+@itemize @bullet
+@item @ref{param_indexed}
+@item @ref{param_indexed_auto}
+@item @ref{param_named}
+@item @ref{param_named_auto}
+@end itemize
+
+@anchor{param_indexed}
+@subheading param_indexed
+This command sets the value of an indexed parameter. @*@*
+
+format: param_indexed <index> <type> <value>@*@*
+example: param_indexed 0 float4 10.0 0 0 0@*@*
+
+The 'index' is simply a number representing the position in the parameter list which the value should be written, and you should derive this from your program definition. The index is relative to the primitive type (for example, float) and not to groupings of types (e.g. float4), so for example if you defined a float4 parameter at index 0, the next index would be 4.@*@*
+
+The value of 'type' can be float, float1, float2, .. float<n>, matrix4x4 (== float16), int, int1, int2 .. int<n>. Note that 'int' parameters are only available on some more advanced program syntaxes, check the D3D or GL vertex / fragment program documentation for full details. Also note that most programs deal with parameters in multiples of 4, so the most useful ones will be float4 and matrix4x4. @*@*
+
+'value' is simply a space or tab-delimited list of values which can be converted into the type you have specified.
+
+@anchor{param_indexed_auto}
+@subheading param_indexed_auto
+
+This command tells Ogre to automatically update a given parameter with a derived value. This frees you from writing code to update program parameters every frame when they are always changing.@*@*
+
+format: param_indexed_auto <index> <value_code> <extra_params>@*@*
+example: param_indexed_auto 0 WORLDVIEWPROJ_MATRIX@*@*
+
+'index' has the same meaning as @ref{param_indexed}; note this time you do not have to specify the size of the parameter because the engine knows this already. In the example, the world/view/projection matrix is being used so this is implicitly a matrix4x4.@*@*
+
+'value_code' is one of a list of recognised values:@*
+@table @asis
+@item WORLD_MATRIX
+The current world matrix.
+@item VIEW_MATRIX
+The current view matrix.
+@item PROJECTION_MATRIX
+The current projection matrix.
+@item WORLDVIEW_MATRIX
+The current world and view matrices concatenated.
+@item WORLDVIEWPROJ_MATRIX
+The current world, view and projection matrices concatenated.
+@item INVERSE_WORLD_MATRIX
+The inverse of the current world matrix.
+@item INVERSE_WORLDVIEW_MATRIX
+The inverse of the current concatenated world and view matrices.
+@item LIGHT_DIFFUSE_COLOUR
+The diffuse colour of a given light; this requires an index in the 'extra_params' field, and relates to the 'nth' closest light which could affect this object (ie 0 refers to the closest light). NB if there are no lights this close, then the parameter will be set to black.
+@item LIGHT_SPECULAR_COLOUR
+The specular colour of a given light; this requires an index in the 'extra_params' field, and relates to the 'nth' closest light which could affect this object (ie 0 refers to the closest light). NB if there are no lights this close, then the parameter will be set to black.
+@item LIGHT_ATTENUATION
+A float4 containing the 4 light attenuation variables for a given light. This requires an index in the 'extra_params' field, and relates to the 'nth' closest light which could affect this object (ie 0 refers to the closest light). NB if there are no lights this close, then the parameter will be set to all zeroes. The order of the parameters is range, constant attenuation, linear attenuation, quadric attenuation.
+@item LIGHT_POSITION_OBJECT_SPACE
+The position of a given light in object space (ie when the object is at (0,0,0)). This requires an index in the 'extra_params' field, and relates to the 'nth' closest light which could affect this object (ie 0 refers to the closest light). NB if there are no lights this close, then the parameter will be set to all zeroes.
+@item LIGHT_DIRECTION_OBJECT_SPACE
+The direction of a given light in object space (ie when the object is at (0,0,0)). This requires an index in the 'extra_params' field, and relates to the 'nth' closest light which could affect this object (ie 0 refers to the closest light). NB if there are no lights this close, then the parameter will be set to all zeroes.
+@item CAMERA_POSITION_OBJECT_SPACE
+The current cameras position in object space (ie when the object is at (0,0,0)).
+@end table
+
+@anchor{param_named}
+@subheading param_named
+This is the same as param_indexed, but uses a named parameter instead of an index. This can only be used with high-level programs which include parameter names; if you're using an assembler program then you have no choice but to use indexes. Note that you can use indexed parameters for high-level programs too, but it is less portable since if you reorder your parameters in the high-level program the indexes will change.@*@*
+format: param_named <name> <type> <value>@*@*
+example: param_named shininess float4 10.0 0 0 0@*@*
+The type is required because the program is not compiled and loaded when the material script is parsed, so at this stage we have no idea what types the parameters are. Programs are only loaded and compiled when they are used, to save memory.
+
+@anchor{param_named_auto}
+@subheading param_named_auto
+
+This is the named equivalent of param_indexed_auto, for use with high-level programs.@*@*
+Format: param_named_auto <name> <value_code> <extra_params>@*@*
+Example: param_named_auto worldViewProj WORLDVIEWPROJ_MATRIX@*@*
+
+The allowed value codes and the meaning of extra_params are detailed in @ref{param_indexed_auto}.
 
 @node Particle Scripts
 @section Particle Scripts
